# Phantom3

./: .gitignore  CMakeLists.txt  README.md  copy_dlls.cmake  main.cpp
Core/: CMakeLists.txt  phantom.cpp  phantom.h  phtcore.h
Database/: CMakeLists.txt  database.cpp  database.h  phtdatabase.h
PhantomEditor/: CMakeLists.txt  main.cpp  phantomeditor.cpp  phantomeditor.h  phantomeditor.ui  resourcewidget.cpp  resourcewidget.h  resourcewidget.ui  scenewidget.cpp  scenewidget.h  scenewidget.ui  ui_phantomeditor.h  ui_resourcewidget.h  ui_scenewidget.h
